--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 						<!-- Thumbnails -->
 							<section class="thumbnails">
-								<!--<div>
-									<a href="images/police_map.png">
-										<img src="images/police_map.png" alt="" />
-										<h3>Police Shooting In United States</h3>
+								<div>
+									<a href="images/Illinois.pdf">
+										<img src="images/Illinois.pdf" alt="" />
+										<h3>Illinois</h3>
 									</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
@@ -41,7 +41,7 @@
 										<img src="images/Carpet.png" alt="" />
 										<h3>PDX Carpet</h3>
 									</a>
-								</div> -->
+								</div>
 								<!--<div>
 									<a href="images/States_map.png">
 										<img src="images/States_map.png" alt="" />
