--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 						<!-- Thumbnails -->
 							<section class="thumbnails">
 								<div>
-									<a href="images/Illinois.pdf">
-										<img src="images/Illinois.pdf" alt="" />
+									<a href="images/Illinois.png">
+										<img src="images/Illinois.png" alt="" />
 										<h3>Illinois</h3>
 									</a>
 									<a href="images/Oilspills_map.png">
