--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 									<a href="images/Illinois.png">
 										<img src="images/Illinois.png" alt="" />
 										<h3>Illinois</h3>
+								
+								<!-- </div>
 									</a>
 									<a href="images/Oilspills_map.png">
 										<img src="images/Oilspills_map.png" alt="" />
@@ -41,6 +43,7 @@
 										<img src="images/Carpet.png" alt="" />
 										<h3>PDX Carpet</h3>
 									</a>
+								</div> -->
 								</div>
 								<!--<div>
 									<a href="images/States_map.png">
