--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 										<img src="images/Illinois.png" alt="" />
 										<h3>Illinois</h3>
 								
-								<!-- </div>
 									</a>
-									<a href="images/Oilspills_map.png">
-										<img src="images/Oilspills_map.png" alt="" />
-										<h3>Crude Oil Spills</h3>
+									<a href="images/Eritrea.png">
+										<img src="Eritrea.png" alt="" />
+										<h3>Eritrea</h3>
+								<!--</div>
 									</a>
 									<a href="images/Carpet.png">
 										<img src="images/Carpet.png" alt="" />
