--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 										<img src="Eritrea.png" alt="" />
 										<h3>Eritrea</h3>
 								<!--</div>
+								
+								</div>
 									</a>
 									<a href="images/Carpet.png">
 										<img src="images/Carpet.png" alt="" />
