--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 									<a href="images/Eritrea.png">
 										<img src="Eritrea.png" alt="" />
 										<h3>Eritrea</h3>
-								<!--</div>
-								
 								</div>
+								
+								<!--<div>
 									</a>
 									<a href="images/Carpet.png">
 										<img src="images/Carpet.png" alt="" />
