--- a/index.html
+++ b/index.html
@@ -37,15 +37,12 @@
 									<a href="images/Eritrea.png">
 										<img src="Eritrea.png" alt="" />
 										<h3>Eritrea</h3>
-								</div>
-								
-								<!--<div>
+			
 									</a>
-									<a href="images/Carpet.png">
-										<img src="images/Carpet.png" alt="" />
-										<h3>PDX Carpet</h3>
+									<a href="images/China.png">
+										<img src="images/China.png" alt="" />
+										<h3>PDX Different Coordinate System Views of China</h3>
 									</a>
-								</div> -->
 								</div>
 								<!--<div>
 									<a href="images/States_map.png">
