--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 								
 									</a>
 									<a href="images/Eritrea.png">
-										<img src="Eritrea.png" alt="" />
+										<img src="images/Eritrea.png" alt="" />
 										<h3>Eritrea</h3>
 			
 									</a>
 									<a href="images/China.png">
 										<img src="images/China.png" alt="" />
-										<h3>PDX Different Coordinate System Views of China</h3>
+										<h3>Different Coordinate System Views of China</h3>
+									
 									</a>
 								</div>
 								<!--<div>
