--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 									
 									</a>
 								</div>
-								<!--<div>
-									<a href="images/States_map.png">
-										<img src="images/States_map.png" alt="" />
-										<h3>US Capitals</h3>
+									<a href="images/Symbolization.png">
+										<img src="images/Symbolization.pn" alt="" />
+										<h3>Northern Macedonia Outdoor Adventures</h3>
 									</a>
-									<a href="images/Coastline_map.png">
-										<img src="images/Coastline_map.png" alt="" />
-										<h3>Louisiana Coastline</h3>
+									<a href="images/Firefly.png">
+										<img src="images/Firefly.png" alt="" />
+										<h3>United States Coast Guard Bases</h3>
+								<!--<div>
 									</a>
 									<a href="images/Portland_map.png">
 										<img src="images/Portland_map.png" alt="" />
