--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 									
 									</a>
 								</div>
+								<div>
 									<a href="images/Symbolization.png">
 										<img src="images/Symbolization.pn" alt="" />
 										<h3>Northern Macedonia Outdoor Adventures</h3>
@@ -52,6 +53,7 @@
 									<a href="images/Firefly.png">
 										<img src="images/Firefly.png" alt="" />
 										<h3>United States Coast Guard Bases</h3>
+								</div>
 								<!--<div>
 									</a>
 									<a href="images/Portland_map.png">
