--- a/index.html
+++ b/index.html
@@ -53,14 +53,12 @@
 									<a href="images/Firefly.png">
 										<img src="images/Firefly.png" alt="" />
 										<h3>United States Coast Guard Bases</h3>
+									</a>
+									<a href="images/Labeling_pt_2.png">
+										<img src="images/Labeling_pt_2.png" alt="" />
+										<h3>Minnesota</h3>
+									</a>
 								</div>
-								<!--<div>
-									</a>
-									<a href="images/Portland_map.png">
-										<img src="images/Portland_map.png" alt="" />
-										<h3>Portland Landscape</h3>
-									</a>
-								</div> -->
 								<!--<div>
 									<a href="images/Transit_map.png">
 										<img src="images/Transit_map.png" alt="" />
