--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								
 								<div>
 									<a href="images/Symbolization.png">
-										<img src="images/Symbolization.pn" alt="" />
+										<img src="images/Symbolization.png" alt="" />
 										<h3>Northern Macedonia Outdoor Adventures</h3>
 										
 									</a>
