--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 										<h3>United States Coast Guard Bases</h3>
 										
 									</a>
-									<a href="images/Labeling_pt_2.png">
-										<img src="images/Labeling_pt_2.png" alt="" />
+									<a href="images/Labeling.png">
+										<img src="images/Labeling.png" alt="" />
 										<h3>Minnesota</h3>
 										
 									</a>
