--- a/index.html
+++ b/index.html
@@ -64,16 +64,20 @@
 									</a>
 								</div>
 								
-								<!--<div>
-									<a href="images/Transit_map.png">
-										<img src="images/Transit_map.png" alt="" />
-										<h3>Humboldt Transit System</h3>
+								<div>
+									<a href="images/Choropleth.png">
+										<img src="images/Choropleth.png" alt="" />
+										<h3>Proportion of Quakers per County in Pennsylvania</h3>
 									</a>
-									<a href="images/US_map.png">
-										<img src="images/US_map.png" alt="" />
-										<h3>Physical Map of United States</h3>
+									<a href="images/Wine.png">
+										<img src="images/Wine.png" alt="" />
+										<h3>Wine in Europe: Vineyards per 100 Hectares</h3>
 									</a>
-								</div> -->
+									<a href="images/Madagascar.png">
+										<img src="images/Madagascar.png" alt="" />
+										<h3>South Eastern Africa and Madagascar</h3>
+									</a>
+								</div>
 							</section>
 						<!--<div>
 						<iframe width="785" height="500" src="https://dikembe3000.github.io/Mural_Project/" frameborder="0" width="100%" height="800"></iframe>
