--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<div>
 									<a href="images/Choropleth.png">
 										<img src="images/Choropleth.png" alt="" />
-										<h3>Proportion of Quakers per County in Pennsylvania</h3>
+										<h3>Proportion of Quakers per County in 1850s Pennsylvania</h3>
 									</a>
 									<a href="images/Wine.png">
 										<img src="images/Wine.png" alt="" />
