--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
 										<img src="images/Madagascar.png" alt="" />
 										<h3>South Eastern Africa and Madagascar</h3>
 									</a>
+									<a> 
+									<iframe width="100%" height="800px" 
+										src="https://humboldtstate.maps.arcgis.com/apps/Cascade/index.html?appid=ea0b33769f98411b919c9cf2b2dfbb65"	
+										frameborder="0" scrolling="yes">
+									</iframe>
+									</a>
 								</div>
 							</section>
 						<!--<div>
